--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/src/assets/img/tacicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To All Creation App</title>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DN0ECCP65B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-DN0ECCP65B');
+    </script>
   </head>
   <body>
     <div id="root"></div>
